2009-04-26  Ingo Feinerer  <feinerer@logic.at>

	* R/termdocmatrix.R: No longer use Matrix package. This reduces
	package start-up time significantly.

2009-04-11  Ingo Feinerer  <feinerer@logic.at>

	* inst/doc/tm.Rnw: Fix code/documentation mismatch.

2009-04-04  Ingo Feinerer  <feinerer@logic.at>

	* R/transform.R (tmReduce): Combine multiple maps into one
	transformation.

2009-04-03  Ingo Feinerer  <feinerer@logic.at>

	* R/weight.R: Remove weightLogical since it does not return a
	dgCMatrix.

	* R/termdocmatrix.R: Removed TermDocMatrix. Use DocumentTermMatrix
	or TermDocumentMatrix instead.

2009-03-28  Ingo Feinerer  <feinerer@logic.at>

	* inst/doc/extensions.Rnw: Finished vignette.

2009-03-27  Ingo Feinerer  <feinerer@logic.at>

	* R/termdocmatrix.R: Start to work on new TermDocumentMatrix and
	DocumentTermMatrix representations.

2009-03-23  Ingo Feinerer  <feinerer@logic.at>

	* R/reader.R (readXML): New reader for arbitrary XML files.

2009-03-22  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R (CSVSource): Defunct (use DataframeSource instead).
	(XMLSource): New XMLSource class for arbitrary XML files.
	(Source): New slot Vectorized.

2009-03-21  Ingo Feinerer  <feinerer@logic.at>

	* R/reader.R (readTabular): Experimental reader for tabular data
	structures which can be customized via user-defined mappings.

	* R/reader.R: Always use UTC time zone.

	* R/AAA.R (.onLoad): No longer try to start a MPI cluster.

2009-03-20  Ingo Feinerer  <feinerer@logic.at>

	* R/reader.R (readDOC): Options can be passed over to antiword.

	* R/reader.R (readPDF): Options can be passed over to pdfinfo and
	pdftotext.

2009-03-10  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R (DirSource): Add pattern and ignore.case arguments
	which are internally passed over to list.files().

2009-03-02  Ingo Feinerer  <feinerer@logic.at>

	* inst/doc/tm.Rnw: Suppress pointless loading message.

2009-01-29  Ingo Feinerer  <feinerer@logic.at>
