@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
 Version: 0.3-4
-Date: 2008-04-26
+Date: 2008-04-27
 Author: Ingo Feinerer, with contributions from Christian Buchta, Kurt Hornik, David Meyer, and Fridolin Wild
 Maintainer: Ingo Feinerer <feinerer@logic.at>
 Depends: R (>= 2.7.0), methods
