@@ -58,8 +58,22 @@ S3method("findAssocs", "matrix")
 
 S3method("dissimilarity", "PlainTextDocument")
 
+S3method("[", "DocumentTermMatrix")
+S3method("colnames", "DocumentTermMatrix")
+S3method("Dictionary", "DocumentTermMatrix")
+S3method("dim", "DocumentTermMatrix")
+S3method("dimnames", "DocumentTermMatrix")
+S3method("dissimilarity", "DocumentTermMatrix")
+S3method("findAssocs", "DocumentTermMatrix")
+S3method("inspect", "DocumentTermMatrix")
+S3method("ncol", "DocumentTermMatrix")
+S3method("nrow", "DocumentTermMatrix")
+S3method("plot", "DocumentTermMatrix")
+S3method("print", "DocumentTermMatrix")
+S3method("t", "DocumentTermMatrix")
+S3method("rownames", "DocumentTermMatrix")
+
 S3method("[", "TermDocumentMatrix")
-S3method("as.matrix", "TermDocumentMatrix")
 S3method("colnames", "TermDocumentMatrix")
 S3method("Dictionary", "TermDocumentMatrix")
 S3method("dim", "TermDocumentMatrix")
@@ -71,6 +85,7 @@ S3method("ncol", "TermDocumentMatrix")
 S3method("nrow", "TermDocumentMatrix")
 S3method("plot", "TermDocumentMatrix")
 S3method("print", "TermDocumentMatrix")
+S3method("t", "TermDocumentMatrix")
 S3method("rownames", "TermDocumentMatrix")
 
 exportMethods(
