@@ -6,5 +6,5 @@ setClass("Dictionary",
 Dictionary <- function(x) UseMethod("Dictionary", x)
 Dictionary.character <- function(x)
     new("Dictionary", .Data = x)
-Dictionary.TermDocumentMatrix <- function(x)
+Dictionary.TermDocumentMatrix <- Dictionary.DocumentTermMatrix <- function(x)
     new("Dictionary", .Data = Terms(x))
