@@ -2,15 +2,18 @@
 \alias{rownames.TermDocumentMatrix}
 \alias{colnames.TermDocumentMatrix}
 \alias{dimnames.TermDocumentMatrix}
+\alias{rownames.DocumentTermMatrix}
+\alias{colnames.DocumentTermMatrix}
+\alias{dimnames.DocumentTermMatrix}
 \alias{Docs}
 \alias{Terms}
 \title{Row, Column, Dim Names, Document IDs, and Terms}
 \description{
   Retrieve the row names, column names, dimnames, document IDs, and
-  terms of a term-document matrix.
+  terms of a term-document matrix or document-term matrix.
 }
 \arguments{
-  \item{x}{A term-document matrix.}
+  \item{x}{Either a term-document matrix or document-term matrix.}
 }
 \examples{
 data("crude")
